--- a/dcu-scheduler/app_config.yml
+++ b/dcu-scheduler/app_config.yml
@@ -2,6 +2,16 @@
 environment:
   log_level: "DEBUG"           # 로그 수준: DEBUG, INFO, WARNING, ERROR, CRITICAL
 
+# 스케줄러 설정
+scheduler:
+  refresh_interval: 30        # 데이터 확인 주기 (초 단위)
+  retry_interval: 10           # 재시도 주기 (초)
+  retry_count: 3               # 작업 실패 시 재시도 횟수
+  retry_delay_seconds: 10      # 재시도 전 대기 시간 (초)
+  coalesce: true               # 누락된 스케줄 병합 여부
+  max_instances: 5             # 최대 동시 실행 인스턴스 수
+  misfire_grace_time: 20       # 누락된 스케줄 허용 시간 (초)
+
 # 임베딩 설정
 embedding:
   model_url: https://engine.edentns.ai/v1 # 임베딩 API URL
@@ -35,17 +45,14 @@ databases:
     port: 5432                 # 포트 번호
     database_name: "poc"                # pgvector 데이터베이스 이름
     schema_name: "dcu"  # 스키마 이름
-    table_name: "embedding_result"    # 테이블 이름
+    table_name: "embedding_notice"    # 테이블 이름
     username: "edentns"            # 사용자 이름
     password: "[P@ssw0rd]"     # 비밀번호
 
-# 스케줄러 설정
-scheduler:
-  refresh_interval: 30        # 데이터 확인 주기 (초 단위)
-  retry_interval: 10           # 재시도 주기 (초)
-  retry_count: 3               # 작업 실패 시 재시도 횟수
-  retry_delay_seconds: 10      # 재시도 전 대기 시간 (초)
-  coalesce: true               # 누락된 스케줄 병합 여부
-  max_instances: 5             # 최대 동시 실행 인스턴스 수
-  misfire_grace_time: 20       # 누락된 스케줄 허용 시간 (초)
-
+# 첨부파일 서버 및 경로 설정
+attachments:
+  host : 192.168.14.132
+  port : 22
+  username : edentns
+  password : "[P@ssw0rd]"
+  folder_path : /home/edentns/dcu/fileStorage
